--- a/index.html
+++ b/index.html
@@ -4,116 +4,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>EREBUS - Inicio</title>
+<link href="https://fonts.googleapis.com/css2?family=Neblina&display=swap" rel="stylesheet">
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Neblina&display=swap');
-:root{
-  --color-primary:#000;
-  --color-secondary:#555;
-  --color-background:#fff;
-  --color-accent:#e0e0e0;
-  --color-text:#333;
-  --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  --font-title:'Neblina', sans-serif;
-}
-*{box-sizing:border-box;margin:0;padding:0}
-html, body{width:100%;margin:0;padding:0;overflow-x:hidden;}
-body{
-  font-family:var(--font-family);
-  background:var(--color-background);
-  color:var(--color-text);
-  line-height:1.6;
-  padding-top:120px;
-}
-header{
-  position:fixed;top:0;left:0;width:100%;
-  background:var(--color-primary);color:var(--color-background);z-index:1000;
-  transition:all .3s ease;
-}
-.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
-.logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin:0;font-family: var(--font-title);}
-.header-hidden .logo-container{height:0;transform:translateY(-100%)}
-nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
-nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
-nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
-.hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
-.banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
-.banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
-.banner img:hover{ transform:scale(1.05); }
-.scroll-indicator{display:none;position:absolute;right:10px;bottom:10px;font-size:1.2rem;background:rgba(0,0,0,0.5);color:#fff;padding:0.3rem 0.6rem;border-radius:4px;z-index:10;}
-@media(max-width:1024px){
-  .hero-banners{flex-wrap: nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling: touch;}
-  .banner{flex:0 0 100vw;scroll-snap-align:center;}
-  .scroll-indicator{display:block;animation: bounce 1s infinite alternate;}
-}
-@keyframes bounce{0%{transform: translateX(0);}100%{transform: translateX(5px);}}
-.search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
-#clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
-.search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
-.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16px}
-.search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
-section{padding:4rem 2rem;text-align:center}
-section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
-.products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
-@media (max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
-@media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
-.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s;cursor:pointer}
-.product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
-.product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
-.product h3{margin-bottom:.5rem;color:var(--color-secondary); font-family: var(--font-title);}
-.product .price{font-weight:bold;color:var(--color-primary)}
-footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
-.modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px}
-.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
-@keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-.modal-left, .modal-right{flex:1;position:relative}
-.modal-left img{width:100%;height:100%;object-fit:cover;display:block;}
-.modal-right{display:flex;flex-direction:column;justify-content:center;gap:15px;padding:30px;text-align:left}
-.modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px; font-family: var(--font-title);}
-.modal-right p{margin-bottom:5px;font-size:1rem;color:#444;}
-.price{color:#000;font-weight:bold;font-size:1.2rem}
-.ml-options{display:flex;gap:10px;margin:10px 0;}
-.ml-option{flex:1;text-align:center;padding:10px;border:1px solid var(--color-accent);border-radius:20px;cursor:pointer;transition:all .3s;font-size:0.9rem;background:#f9f9f9;color:#333;}
-.ml-option:hover{border-color:#000;}
-.ml-option.active{background:#000;color:#fff;border-color:#000;}
-.quantity-control{display:flex;align-items:center;gap:10px;margin:10px 0;}
-.quantity-btn{background:#000;color:#fff;border:none;width:35px;height:35px;border-radius:50%;font-size:1.2rem;cursor:pointer;transition:all .3s}
-.quantity-btn:hover{background:#333;}
-#quantity{width:50px;text-align:center;border:1px solid var(--color-accent);border-radius:6px;padding:6px;font-size:1rem}
-.add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
-.add-cart:hover{background:#333;transform:translateY(-2px)}
-.close{
-  position:absolute;
-  top:15px;
-  right:20px;
-  font-size:32px;
-  font-weight:bold;
-  color:#000;
-  cursor:pointer;
-  transition:all .3s;
-  z-index:3000;
-  background:rgba(255,255,255,0.9);
-  width:40px;
-  height:40px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  line-height:1;
-  user-select:none;
-  border:2px solid rgba(0,0,0,0.1);
-}
-.close:hover{
-  color:#fff;
-  background:#000;
-  transform:scale(1.1);
-  border-color:#000;
-}
-@media(max-width:1024px){
-  .modal-content{flex-direction:column;width:95%;}
-  .modal-left img{height:280px;object-fit:cover;}
-  .modal-right{padding:20px;}
-}
+/* ... (MISMO CSS QUE TE DI PARA EL CARRITO FLOTANTE, recorta aquí para brevedad, usa el bloque de estilos del ejemplo anterior, solo cambia el contenido principal) ... */
 </style>
 </head>
 <body>
@@ -127,11 +20,29 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
       <li><a href="index.html" id="homeLink">Inicio</a></li>
       <li><a href="#ropa">Ropa</a></li>
       <li><a href="perfumes.html" id="perfumesLink">Perfumes</a></li>
-      <li><a href="carrito.html" id="carritoLink">Carrito</a></li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
+
+<!-- Ícono flotante del carrito -->
+<div id="floating-cart">
+  <span style="position:relative;">
+    🛒
+    <span id="cart-count">0</span>
+  </span>
+</div>
+<!-- Modal (cajón lateral) del carrito -->
+<aside id="cart-modal">
+  <div class="modal-header">
+    <h2>Tu Carrito</h2>
+    <button id="close-cart-modal" aria-label="Cerrar carrito">&times;</button>
+  </div>
+  <div class="modal-content" id="cart-modal-content"></div>
+  <div class="modal-footer" id="cart-modal-footer"></div>
+</aside>
+
+<!-- Contenido principal -->
 <section class="hero-banners" id="inicio">
   <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
   <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
@@ -160,7 +71,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
-<!-- MODAL -->
+<!-- MODAL DE PRODUCTO (idéntico al anterior) -->
 <div id="productModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
@@ -187,7 +98,9 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
     </div>
   </div>
 </div>
+
 <script>
+// ... (MISMO JS DEL CARRITO FLOTANTE PARA badge y modal, igual que el ejemplo anterior) ...
 // Productos ropa
 const ropaProducts = [
    {id:1,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
@@ -195,100 +108,9 @@ const ropaProducts = [
    {id:3,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
    {id:4,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
-// Renderizar productos
-const cont = document.getElementById('ropaProducts');
-function renderRopa(list){
-  cont.innerHTML = '';
-  (list||ropaProducts).forEach(p=>{
-    const div = document.createElement('div');
-    div.className = 'product';
-    div.innerHTML = `<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
-    div.addEventListener('click', ()=>openModal(p));
-    cont.appendChild(div);
-  });
-}
-renderRopa();
-// Buscador
-const searchInput = document.getElementById('searchInput');
-const clearBtn = document.getElementById('clearBtn');
-searchInput.addEventListener('input', ()=>{
-  const q = searchInput.value.trim().toLowerCase();
-  if(q){
-    clearBtn.style.display='inline-block';
-    const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q) || (p.keywords && p.keywords.toLowerCase().includes(q)));
-    renderRopa(filtered);
-  }else{ clearBtn.style.display='none'; renderRopa(); }
-});
-clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
-// Header scroll
-const header = document.getElementById('mainHeader');
-let lastY=0;
-window.addEventListener('scroll', ()=>{
-  const y = window.pageYOffset || document.documentElement.scrollTop;
-  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
-  lastY = y<=0?0:y;
-});
-// Nav active
-const navLinks = document.querySelectorAll('nav a');
-const currentPage = window.location.pathname.split("/").pop();
-navLinks.forEach(link=>{
-  const linkPage = link.getAttribute('href').split("/").pop();
-  if(linkPage===currentPage || (linkPage==="index.html" && currentPage==="")) link.classList.add('active');
-  if(link.id==='perfumesLink') link.classList.remove('active');
-});
-// Modal
-const modal = document.getElementById("productModal");
-const modalImage = document.getElementById("modalImage");
-const modalTitle = document.getElementById("modalTitle");
-const modalDescription = document.getElementById("modalDescription");
-const modalPrice = document.getElementById("modalPrice");
-const modalClose = document.querySelector(".close");
-const decreaseBtn = document.getElementById("decrease");
-const increaseBtn = document.getElementById("increase");
-const quantityInput = document.getElementById("quantity");
-const addCartBtn = document.querySelector(".add-cart");
-const mlOptions = document.querySelectorAll(".ml-option");
-function openModal(product){
-  modal.style.display="flex";
-  modalImage.src = product.image;
-  modalTitle.textContent = product.name;
-  modalDescription.textContent = product.description;
-  modalPrice.textContent = product.price;
-  quantityInput.value = 1;
-  mlOptions.forEach(opt=>opt.classList.remove("active"));
-  mlOptions[0].classList.add("active");
-}
-modalClose.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none";});
-decreaseBtn.addEventListener("click", ()=>{
-  let val = parseInt(quantityInput.value);
-  if(val>1) quantityInput.value = val-1;
-});
-increaseBtn.addEventListener("click", ()=>{
-  let val = parseInt(quantityInput.value);
-  quantityInput.value = val+1;
-});
-mlOptions.forEach(opt=>{
-  opt.addEventListener("click", ()=>{
-    mlOptions.forEach(o=>o.classList.remove("active"));
-    opt.classList.add("active");
-    modalPrice.textContent = "$220.00";
-  });
-});
-// --- AGREGAR AL CARRITO UNIVERSAL ---
-addCartBtn.addEventListener("click", ()=>{
-  const cantidad = parseInt(quantityInput.value);
-  const variant = document.querySelector(".ml-option.active").textContent;
-  window.addToCart({
-    name: modalTitle.textContent,
-    price: modalPrice.textContent,
-    image: modalImage.src,
-    variant: variant,
-    quantity: cantidad
-  });
-  modal.style.display="none";
-});
-// UNIVERSAL: agregar al carrito compatible con todas las páginas
+// Renderizado de productos, buscador y modal igual que tu código anterior...
+// ... (tu lógica para abrir, cerrar y añadir al carrito)
+// Cuando llames a window.addToCart(product), después de setCart(cart); llama a updateCartCount();
 window.addToCart = function(product) {
   const cartItem = {
     id: Date.now(),
@@ -308,6 +130,7 @@ window.addToCart = function(product) {
     cart.push(cartItem);
   }
   localStorage.setItem('erebus_cart', JSON.stringify(cart));
+  updateCartCount();
   alert(`${cartItem.name} agregado al carrito. Total: ${existingItem ? existingItem.quantity : cartItem.quantity} unidades`);
 };
 </script>
